--- a/eventPage.html
+++ b/eventPage.html
@@ -14,7 +14,7 @@
         background-size: cover;
         color: white;
         text-align: center;
-        padding: 100px 0;
+        padding: 75px 0;
     }
     .jumbotron h1 {
         font-size: 3rem;
@@ -41,7 +41,7 @@
 <div class="jumbotron">
     <div class="container">
         <h1 class="display-4">Youth Clinics</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut aliquet ante a eros fringilla, nec pulvinar libero congue.</p>
+        <p class="lead">Clinics for the youth.</p>
     </div>
 </div>
 
