--- a/index.html
+++ b/index.html
@@ -58,12 +58,15 @@
 
 <!-- Main Content Section -->
 <div style="text-align: center;">
+  <br>
   <h2 style="font-family: Tahoma, Geneva, sans-serif;font-size: xl-large; "><u>Upcoming Events:</u></h2>
   <br>
-  <p>Youth Clinics</p>
-  <div class="d-flex justify-content-center">
-      <a href="eventPage.html" class="btn" style="background-color: #ff0000; color: white;">Learn More</a>
-  </div>
+  <a href="eventPage.html">Youth Clinics</a>
+  <br> 
+  <br>
+  <a href="eventPage.html">Summer Programs</a>
+  <br>
+  <br>
   <div class="container mt-5">
       <div class="row">
           <div class="col-md-6 order-md-1"> <!-- Keep order-md-1 to display first -->
