--- a/summerprogram.html
+++ b/summerprogram.html
@@ -8,9 +8,10 @@
 <style>
     body {
         font-family: Arial, sans-serif;
+        background-color: rgb(255, 252, 252);
     }
     .jumbotron {
-        background-color: rgb(134, 184, 196);
+        background-color: rgb(219, 214, 162);
         background-size: cover;
         color: white;
         text-align: center;
@@ -41,7 +42,7 @@
 <!-- Jumbotron -->
 <div class="jumbotron">
     <div class="container">
-        <h1 class="display-4">Youth Clinics</h1>
+        <h1 class="display-4">Summer Programs</h1>
     </div>
 </div>
 
@@ -79,6 +80,7 @@
         </div>
     </div>
 </div>
+        
 
 <!-- Footer -->
 <footer class="footer bg-light text-center mt-5">
