--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <a href="eventPage.html">Youth Clinics</a>
   <br> 
   <br>
-  <a href="eventPage.html">Summer Programs</a>
+  <a href="summerprogram.html">Summer Programs</a>
   <br>
   <br>
   <div class="container mt-5">
